[package]
name = "advent_of_code_2019_rust"
version = "0.1.0"
authors = ["Joe Soares <error698@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.*"
clap = "3.0.0-beta.1"
itertools = "0.9.*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
